独立出Commons DataCache 和Commons Core组件

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 
     <modules>
         <module>commons-datacache</module>
+        <module>commons-core</module>
+        <module>commons-nosql</module>
     </modules>
 
     <properties>
