--- a/commons-datacache/pom.xml
+++ b/commons-datacache/pom.xml
@@ -20,9 +20,19 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+
+    <mongodb.version>2.9.3</mongodb.version>
+    <!--<mongodb.version>3.10.1</mongodb.version>-->
+
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.landy</groupId>
+      <artifactId>commons-core</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
     <dependency>
       <groupId>danga</groupId>
       <artifactId>memCached</artifactId>
@@ -32,7 +42,7 @@
       <dependency>
         <groupId>org.mongodb</groupId>
         <artifactId>mongo-java-driver</artifactId>
-        <version>3.10.1</version>
+        <version>${mongodb.version}</version>
       </dependency>
   </dependencies>
 
