1. 添加MongoDb DAO组件 2. 完善DataCache组件注解配置化

--- a/commons-core/pom.xml
+++ b/commons-core/pom.xml
@@ -11,5 +11,7 @@
 
     <artifactId>commons-core</artifactId>
 
-
+    <build>
+        <finalName>commons-core</finalName>
+    </build>
 </project>
