--- a/commons-datacache/pom.xml
+++ b/commons-datacache/pom.xml
@@ -21,9 +21,6 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
 
-    <mongodb.version>2.9.3</mongodb.version>
-    <!--<mongodb.version>3.10.1</mongodb.version>-->
-
   </properties>
 
   <dependencies>
@@ -32,18 +29,25 @@
       <artifactId>commons-core</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.landy</groupId>
+      <artifactId>commons-nosql</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <!--MemCache-->
     <dependency>
       <groupId>danga</groupId>
       <artifactId>memCached</artifactId>
       <version>2.6.6</version>
       <scope>compile</scope>
     </dependency>
-      <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongo-java-driver</artifactId>
-        <version>${mongodb.version}</version>
-      </dependency>
+    <!--MemCache连接池依赖包-->
+    <dependency>
+      <groupId>commons-pool</groupId>
+      <artifactId>commons-pool</artifactId>
+      <version>1.6</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
