1. 添加MongoDb DAO组件 2. 完善DataCache组件注解配置化

--- a/commons-datacache/src/main/resources/config/data-cache.yml
+++ b/commons-datacache/src/main/resources/config/data-cache.yml
@@ -5,6 +5,7 @@ data:
       #缓存策略，可选值：local/mongodb/redis/memcached
       cacheStrategy: "mongodb"
       mappingLocalFlag: true
+      #映射到本地缓存的过期时间（单位：S）
       expiredTime: 10
       cacheKeyPrefix: "fortune_"
       loadFlag: true
