--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,19 @@
     </modules>
 
     <properties>
+        <!--system-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
+        <!--Provided version-->
+        <servlet.api.version>3.1.0</servlet.api.version>
+
+        <commons.collections4.version>4.1</commons.collections4.version>
+        <commons.lang3.version>3.3.1</commons.lang3.version>
+        <commons.beanutils.version>1.9.2</commons.beanutils.version>
+        <commons.configuration2.version>2.4</commons.configuration2.version>
+        <commons.io.version>2.4</commons.io.version>
         <!--Spring -->
         <!--<spring.version>4.2.3.RELEASE</spring.version>-->
         <spring.version>5.1.5.RELEASE</spring.version>
@@ -33,6 +42,9 @@
         <slf4j.version>1.7.5</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <logback.version>1.2.3</logback.version>
+
+        <!--test-->
+        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
@@ -72,35 +84,40 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>${servlet.api.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <!-- apache commons -->
         <dependency>
             <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons.collections4.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.3.1</version>
+            <version>${commons.lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <version>${commons.io.version}</version>
         </dependency>
-        <dependency>
-            <groupId>commons-collections</groupId>
-            <artifactId>commons-collections</artifactId>
-            <version>3.2.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>commons-collections</groupId>-->
+            <!--<artifactId>commons-collections</artifactId>-->
+            <!--<version>3.2.1</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
-            <version>1.9.2</version>
+            <version>${commons.beanutils.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-configuration2</artifactId>
-            <version>2.4</version>
+            <version>${commons.configuration2.version}</version>
         </dependency>
 
         <!-- Spring -->
@@ -191,7 +208,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -213,7 +230,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.8.0</version>
                 <configuration>
                     <source>1.8</source> <!-- 源代码使用的开发版本 -->
                     <target>1.8</target> <!-- 需要生成的目标class文件的编译版本 -->
