--- a/commons-datacache/src/main/resources/config/data-cache.yml
+++ b/commons-datacache/src/main/resources/config/data-cache.yml
@@ -9,11 +9,14 @@ data:
       expiredTime: 10
       cacheKeyPrefix: "fortune_"
       loadFlag: true
+      #是否集群,如果集群，则使用各自缓存中间件的集群配置
+      clusterFlag: false
     server:
       host: 127.0.0.1
       port: 28028
       account: fortune
       password: fortune
+
 
 #MongoDB配置
 mongodb:
@@ -25,8 +28,15 @@ memcache:
   initConn: 50
   minConn: 50
   maxConn: 500
+  #server 连接池大小
+  connectionPoolSize: 2
   #Memcached缓存过期时间(s)
   expiredTime: 30
+  #集群配置格式：account:password@host:port@weight
+  cluster:
+      - fortune1:fortune1@127.0.0.1:11211@1
+      - fortune2:fortune2@127.0.0.1:11212@2
+      - fortune3:fortune3@127.0.0.1:11213@3
 
 #Redis配置
 
