--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>commons-datacache</module>
         <module>commons-core</module>
         <module>commons-nosql</module>
+        <module>commons-export</module>
+        <module>commons-web</module>
     </modules>
 
     <properties>
