导出组件web端实现（2）

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <module>commons-nosql</module>
         <module>commons-export</module>
         <module>commons-web</module>
+        <module>commons-web-springmvc</module>
+        <module>fortune-commons-example</module>
     </modules>
 
     <properties>
