导出组件web端实现（4）

--- a/commons-web-springmvc/pom.xml
+++ b/commons-web-springmvc/pom.xml
@@ -17,6 +17,17 @@
             <artifactId>commons-web</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--web mvc 中HTTP JSON转换器-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
