--- a/commons-core/pom.xml
+++ b/commons-core/pom.xml
@@ -11,16 +11,12 @@
 
     <artifactId>commons-core</artifactId>
 
-    <properties>
-        <freemarker.version>2.3.28</freemarker.version>
-    </properties>
-
     <dependencies>
         <!--Spring 3.2以后 Spring Framework已经包含了cglib的jar包，可不必手动引入-->
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
-            <version>3.2.10</version>
+            <version>${cglib.version}</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
