--- a/commons-export/pom.xml
+++ b/commons-export/pom.xml
@@ -5,12 +5,13 @@
     <parent>
         <artifactId>fortune-commons</artifactId>
         <groupId>org.landy</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>commons-export</artifactId>
+    <version>${fortune.commons.export.version}</version>
     <name>commons-export</name>
+    <packaging>jar</packaging>
     <description>通用导出组件</description>
 
     <properties>
@@ -27,7 +28,7 @@
         <dependency>
             <groupId>org.landy</groupId>
             <artifactId>commons-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${fortune.commons.core.version}</version>
         </dependency>
         <!-- excel 操作 start -->
         <!--http://jxls.sourceforge.net/-->
