--- a/commons-web-springmvc/pom.xml
+++ b/commons-web-springmvc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>fortune-commons</artifactId>
         <groupId>org.landy</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>org.landy</groupId>
             <artifactId>commons-web</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${fortune.commons.web.version}</version>
         </dependency>
         <!--web mvc 中HTTP JSON转换器-->
         <dependency>
