--- a/commons-web/pom.xml
+++ b/commons-web/pom.xml
@@ -5,22 +5,25 @@
     <parent>
         <artifactId>fortune-commons</artifactId>
         <groupId>org.landy</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>org.landy</groupId>
     <artifactId>commons-web</artifactId>
+    <version>${fortune.commons.web.version}</version>
+    <name>commons-web</name>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.landy</groupId>
             <artifactId>commons-datacache</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${fortune.commons.datacache.version}</version>
         </dependency>
         <dependency>
             <groupId>org.landy</groupId>
             <artifactId>commons-export</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${fortune.commons.export.version}</version>
         </dependency>
     </dependencies>
 
