--- a/fortune-commons-example/pom.xml
+++ b/fortune-commons-example/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>fortune-commons</artifactId>
         <groupId>org.landy</groupId>
-        <version>1.0.1</version>
+        <version>1.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>org.landy</groupId>
             <artifactId>commons-web-springmvc</artifactId>
-            <version>1.0.1</version>
+            <version>${fortune.commons.web.springmvc.version}</version>
         </dependency>
     </dependencies>
 
