[phrase#2]Netty实现文件上传下载功能

--- a/commons-doc-common/pom.xml
+++ b/commons-doc-common/pom.xml
@@ -44,6 +44,17 @@
             <version>${thumbnailator.version}</version>
         </dependency>
 
+        <!--web mvc 中HTTP JSON转换器-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
