--- a/commons-doc-server/pom.xml
+++ b/commons-doc-server/pom.xml
@@ -15,6 +15,13 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!-- javax-servlet API必须导入 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.fortune</groupId>
             <artifactId>commons-doc-common</artifactId>
@@ -25,6 +32,36 @@
 
     <build>
         <finalName>commons-doc-server</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.0</version>
+                <!--可以忽略web.xml的缺失检测-->
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+            <!--http://tomcat.apache.org/maven-plugin-2.2/ -->
+            <!--在Spring Boot中也有一个类似的插件：spring-boot-maven-plugin-->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.1</version>
+                <executions>
+                    <execution>
+                        <id>tomcat-run</id>
+                        <goals>
+                            <goal>exec-war-only</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <path>/</path> <!-- 相当于ServletContext的path路径 -->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
