[phrase#3]Netty实现文件上传下载功能,修改maven依赖管理方式，统一版本管理

--- a/commons-doc-server/pom.xml
+++ b/commons-doc-server/pom.xml
@@ -5,27 +5,38 @@
     <parent>
         <artifactId>fortune-commons</artifactId>
         <groupId>org.fortune</groupId>
-        <version>1.0.2</version>
+        <version>1.0.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.fortune</groupId>
     <artifactId>commons-doc-server</artifactId>
-    <version>${fortune.commons.doc.server.version}</version>
+    <version>1.0.3</version>
     <name>commons-doc-server</name>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <dependencies>
-        <!-- javax-servlet API必须导入 -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
-            <scope>provided</scope>
-        </dependency>
         <dependency>
             <groupId>org.fortune</groupId>
             <artifactId>commons-doc-common</artifactId>
-            <version>${fortune.commons.doc.common.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--SpringJUnit4ClassRunner requires JUnit 4.12 or higher.-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!--spring单元测试依赖 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
