--- a/commons-web/pom.xml
+++ b/commons-web/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>fortune-commons</artifactId>
         <groupId>org.fortune</groupId>
-        <version>1.0.2</version>
+        <version>1.0.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.fortune</groupId>
     <artifactId>commons-web</artifactId>
-    <version>${fortune.commons.web.version}</version>
+    <version>1.0.3</version>
     <name>commons-web</name>
     <packaging>jar</packaging>
 
@@ -18,13 +18,35 @@
         <dependency>
             <groupId>org.fortune</groupId>
             <artifactId>commons-datacache</artifactId>
-            <version>${fortune.commons.datacache.version}</version>
         </dependency>
         <dependency>
             <groupId>org.fortune</groupId>
             <artifactId>commons-export</artifactId>
-            <version>${fortune.commons.export.version}</version>
+        </dependency>
+
+        <!-- javax-servlet -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--SpringJUnit4ClassRunner requires JUnit 4.12 or higher.-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!--spring单元测试依赖 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>commons-web</finalName>
+    </build>
 </project>
