--- a/commons-datacache/pom.xml
+++ b/commons-datacache/pom.xml
@@ -7,44 +7,28 @@
   <parent>
     <groupId>org.fortune</groupId>
     <artifactId>fortune-commons</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
   </parent>
 
   <groupId>org.fortune</groupId>
   <artifactId>commons-datacache</artifactId>
-  <version>${fortune.commons.datacache.version}</version>
+  <version>1.0.3</version>
   <name>commons-datacache</name>
   <packaging>jar</packaging>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <!--memCached 四种客户端版本，推荐：xmemcached-->
-    <!--https://www.cnblogs.com/EasonJim/p/7624822.html-->
-    <!--https://github.com/killme2008/xmemcached/wiki/Xmemcached%20%E4%B8%AD%E6%96%87%E7%94%A8%E6%88%B7%E6%8C%87%E5%8D%97-->
-    <xmemcached.version>2.4.6</xmemcached.version>
-    <spymemcached.version>2.12.2</spymemcached.version>
-    <danga.memcached.version>2.6.6</danga.memcached.version>
-    <memcached.java.client.version>3.0.2</memcached.java.client.version>
-  </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.fortune</groupId>
       <artifactId>commons-core</artifactId>
-      <version>${fortune.commons.datacache.version}</version>
     </dependency>
     <dependency>
       <groupId>org.fortune</groupId>
       <artifactId>commons-nosql</artifactId>
-      <version>${fortune.commons.nosql.version}</version>
     </dependency>
     <!--MemCache-->
     <dependency>
-    <groupId>com.googlecode.xmemcached</groupId>
-    <artifactId>xmemcached</artifactId>
-    <version>${xmemcached.version}</version>
+      <groupId>com.googlecode.xmemcached</groupId>
+      <artifactId>xmemcached</artifactId>
     </dependency>
     <!--<dependency>-->
       <!--<groupId>net.spy</groupId>-->
@@ -69,6 +53,20 @@
       <!--<version>1.6</version>-->
       <!--<scope>compile</scope>-->
     <!--</dependency>-->
+
+    <!--SpringJUnit4ClassRunner requires JUnit 4.12 or higher.-->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <!--spring单元测试依赖 -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
