[phrase#6]修改maven 插件统一管理

--- a/commons-core/pom.xml
+++ b/commons-core/pom.xml
@@ -142,5 +142,11 @@
 
     <build>
         <finalName>commons-core</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 </project>
