--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
     </modules>
 
     <properties>
+        <!--system-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
+        <!-- fortune commons组件版本 -->
         <fortune.commons.datacache.version>1.0.3</fortune.commons.datacache.version>
         <fortune.commons.core.version>1.0.3</fortune.commons.core.version>
         <fortune.commons.nosql.version>1.0.3</fortune.commons.nosql.version>
@@ -37,10 +43,6 @@
         <fortune.commons.doc.client.version>1.0.3</fortune.commons.doc.client.version>
         <!-- 文件服务服务端 -->
         <fortune.commons.doc.server.version>1.0.3</fortune.commons.doc.server.version>
-        <!--system-->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
 
         <!--Provided version-->
         <servlet.api.version>3.1.0</servlet.api.version>
@@ -532,7 +534,7 @@
                 <plugin>
                     <groupId>org.apache.tomcat.maven</groupId>
                     <artifactId>tomcat7-maven-plugin</artifactId>
-                    <version>2.1</version>
+                    <version>2.2</version>
                     <executions>
                         <execution>
                             <id>tomcat-run</id>
@@ -541,7 +543,7 @@
                             </goals>
                             <phase>package</phase>
                             <configuration>
-                                <path>/</path> <!-- 相当于ServletContext的path路径 -->
+                                <path>/${project.build.finalName}</path><!-- 相当于ServletContext的path路径 -->
                             </configuration>
                         </execution>
                     </executions>
