--- a/commons-doc-server-http/pom.xml
+++ b/commons-doc-server-http/pom.xml
@@ -16,11 +16,23 @@
     <packaging>war</packaging>
     <description>文件服务组件服务端 HTTP实现方式</description>
 
+    <properties>
+        <commons-fileupload.version>1.3.1</commons-fileupload.version>
+    </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.fortune</groupId>
             <artifactId>commons-doc-common</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons-fileupload.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
