--- a/commons-doc-server-netty/src/main/resources/config/doc-server.yml
+++ b/commons-doc-server-netty/src/main/resources/config/doc-server.yml
@@ -3,13 +3,13 @@
 accounts:
   - userName: fortune
     password: fortune
-    rootPath: C:\06_temp\upload #上传文件的根目录,实际工作环境按照实际情况更改即可
+    rootPath: C:\05_webserver\apache-tomcat-8.5.42\webapps\doc-server #上传文件的根目录,实际工作环境按照实际情况更改即可
     level: 1
     thumbHeight: 100
     thumbWidth: 100
   - userName: fortune0
     password: fortune0
-    rootPath: C:\06_temp\upload #上传文件的根目录,实际工作环境按照实际情况更改即可
+    rootPath: C:\05_webserver\apache-tomcat-8.5.42\webapps\doc-server #上传文件的根目录,实际工作环境按照实际情况更改即可
     level: 1
     thumbHeight: 100
     thumbWidth: 100
