--- a/commons-doc-client-netty/src/test/resources/config/doc-client.yml
+++ b/commons-doc-client-netty/src/test/resources/config/doc-client.yml
@@ -1,6 +1,11 @@
+#上传成功后，访问文件的正确方式为：
+# ${host}/${port}/${appName}/${path}
+# appName为远程文件服务app名称，比如doc-server
+# path为文件上传后服务端返回的文件相对路径
+#http://localhost:8080/doc-server/fortune//p//190629082821_8300.jpg
 upload:
   server:
-    port: 9999
+    port: 8080 #需要配置的是远程文件服务器的tomcat的端口号，非远程文件服务netty端口号
     host: 127.0.0.1
   userName: fortune
   password: fortune
