--- a/commons-doc-server-http/src/test/resources/config/doc-server.yml
+++ b/commons-doc-server-http/src/test/resources/config/doc-server.yml
@@ -3,15 +3,19 @@
 accounts:
   - userName: fortune
     password: fortune
-    rootPath: C:\05_webserver\apache-tomcat-8.5.42\webapps\doc-server #上传文件的根目录,实际工作环境按照实际情况更改即可
+    # 在idea中执行的话，需要配置target目录下的打包文件
+    rootPath: C:\03_code\idea_workspace\fortune-commons\commons-doc-server-http\target\commons-doc-server-http\ #上传文件的根目录,实际工作环境按照实际情况更改即可
     level: 1
     thumbHeight: 100
     thumbWidth: 100
   - userName: fortune0
     password: fortune0
+    # 也可以单独把打包后的war包拷贝到tomcat webapp目录下直接运行也可以
     rootPath: C:\05_webserver\apache-tomcat-8.5.42\webapps\doc-server #上传文件的根目录,实际工作环境按照实际情况更改即可
     level: 1
     thumbHeight: 100
     thumbWidth: 100
 port: 9999 #端口号
 fileBaseDirectory: C:\06_temp\upload\tmp #临时文件的目录
+imagesBasePath: images #全路径由${accounts.rootPath} + ${imagesBasePath}
+attachmentBasePath: attaches #全路径由${accounts.rootPath} + ${attachmentBasePath}
