--- a/commons-doc-client-http/pom.xml
+++ b/commons-doc-client-http/pom.xml
@@ -17,12 +17,26 @@
 
     <description>文件服务组件客户端 Netty实现方式</description>
 
+    <properties>
+        <apache-httpcomponents.version>4.3.4</apache-httpcomponents.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.fortune</groupId>
             <artifactId>commons-doc-common</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${apache-httpcomponents.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>${apache-httpcomponents.version}</version>
+        </dependency>
         <!--SpringJUnit4ClassRunner requires JUnit 4.12 or higher.-->
         <dependency>
             <groupId>junit</groupId>
