--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
         <fastjson.version>1.2.58</fastjson.version>
         <thumbnailator.version>0.4.3</thumbnailator.version>
 
+        <apache-httpcomponents.version>4.5.5</apache-httpcomponents.version>
     </properties>
 
     <dependencyManagement>
@@ -437,7 +438,16 @@
             <!--<version>1.18.6</version>-->
             <!--<scope>provided</scope>-->
             <!--</dependency>-->
-
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${apache-httpcomponents.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpmime</artifactId>
+                <version>${apache-httpcomponents.version}</version>
+            </dependency>
             <!--redis-->
             <dependency>
                 <groupId>redis.clients</groupId>
