--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,8 @@
         <fastjson.version>1.2.58</fastjson.version>
         <thumbnailator.version>0.4.3</thumbnailator.version>
 
+        <javax.mail.version>1.4.7</javax.mail.version>
+
         <apache-httpcomponents.version>4.5.5</apache-httpcomponents.version>
     </properties>
 
@@ -182,6 +184,12 @@
                 <scope>provided</scope>
             </dependency>
 
+            <!-- Javax-mail  -->
+            <dependency>
+                <groupId>javax.mail</groupId>
+                <artifactId>mail</artifactId>
+                <version>${javax.mail.version}</version>
+            </dependency>
             <!-- apache commons -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
